--- a/AshesiLibraryESP32/HTML/Librarian.html
+++ b/AshesiLibraryESP32/HTML/Librarian.html
@@ -710,7 +710,7 @@
             <option value="thirtyDays">30 days</option>
           </select>
           <!-- <input type="text" id="duration" name="title" /><br /><br /> -->
-          <button onclick="editBook()" id="CheckInButton">Check In</button>
+          <button onclick="editBook()" id="CheckInButton">Check Out</button>
         </div>
       </div>
     </div>
@@ -766,7 +766,7 @@
             </select> -->
           <!-- <input type="text" id="duration" name="title" /><br /><br /> -->
           <button onclick="CheckoutEditBook()" id="CheckOutButton">
-            Check Out
+            Check In
           </button>
         </div>
       </div>
